# consortium

./: .commitlint-pre-commit.yaml  .commitlintrc.yml  .envrc  .gitignore  .pre-commit-config-commitlint.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CI_CD_FIXES.md  CI_CD_IMPROVEMENTS.md  CLUSTER_SHELL_ENGINE_SUMMARY.md  CONVENTIONAL_COMMITS.md  CONVENTIONAL_COMMITS_GUIDE.md  Cargo.toml  PROGRESS.md  README.md  SETUP_COMPLETE.md  SPEC.md  TEST_HARNESS_SPEC.md  TEST_MAPPING.toml  UPSTREAM_REF  cliff.toml  commitlint.config.cjs  commitlint.config.mjs  crates.js  flake.nix  migration-dag.d2  package-lock.json  package.json  pyproject.toml  release-plz.toml
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  migration-scorecard.yml  nosetests.yml  release.yml
_consortium/: all.html
autoresearch/: .baseline.json  .env.example  .gitignore  README.md  city.toml  city.toml.v1.bak  pack.toml  program.md  results.tsv
autoresearch/.beads/: config.yaml  metadata.json
autoresearch/orders/: accountant-patrol.toml  drain-queue.toml  refill-queue.toml
cast/: fn.cmd_deploy.html  fn.cmd_eval.html  fn.cmd_health.html  fn.cmd_status.html  fn.resolve_targets.html  index.html  struct.Args.html
claw/: fn.build_ssh_options.html  fn.display_dshbak.html  fn.display_results.html  fn.display_standard.html  fn.find_groups_conf.html  fn.load_group_resolver.html  fn.resolve_nodes.html  fn.run.html  fn.shell_escape.html  index.html
consortium/: index.html
consortium_ansible/: fn.run_playbook.html  index.html
consortium_nix/: fn.deploy.html
consortium_ray/: fn.submit_job.html
consortium_skypilot/: all.html  fn.launch_task.html
consortium_slurm/: fn.submit_job.html
consortium_test_harness/: sidebar-items.js  struct.ClusterTopology.html  struct.DockerCluster.html
crates/consortium/: CHANGELOG.md  Cargo.toml
crates/consortium-ansible/: Cargo.toml
crates/consortium-ansible/src/: error.rs  inventory.rs  lib.rs  tasks.rs
crates/consortium-cli/: CHANGELOG.md  Cargo.toml
crates/consortium-cli/examples/: tree_demo.rs
crates/consortium-cli/src/: cast.rs  claw.rs  display.rs  event_render.rs  fold.rs  inventory.rs  lib.rs  molt.rs  output.rs  pinch.rs  tree.rs
crates/consortium-cli/tests/: cascade_viz_tests.rs  cast_tests.rs  claw_tests.rs  molt_tests.rs  pinch_tests.rs
crates/consortium-fanout-sim/: CHANGELOG.md  Cargo.toml
crates/consortium-fanout-sim/benches/: cascade_strategies.rs
crates/consortium-fanout-sim/examples/: scale_1024.rs  scale_256.rs
crates/consortium-fanout-sim/src/: executor.rs  fixtures.rs  lib.rs  scenario.rs
crates/consortium-fanout-sim/tests/: contention.rs  correctness.rs  fuzz.rs  scale_smoke.rs
crates/consortium-nix/: CHANGELOG.md  Cargo.toml
crates/consortium-nix/src/: activate.rs  build.rs  cascade.rs  cascade_events.rs  cascade_executor.rs  cascade_integration.rs  cascade_strategies.rs  cascade_trace.rs  config.rs  copy.rs  error.rs  eval.rs  health.rs  lib.rs  tasks.rs
crates/consortium-nix/tests/: parallel_builds.rs
crates/consortium-py/: CHANGELOG.md  Cargo.toml  PLAN.md  build.rs  pyproject.toml
crates/consortium-py/ClusterShell/: Communication.py  Defaults.py  Event.py  Gateway.py  MsgTree.py  NodeSet.py  NodeUtils.py  Propagation.py  RangeSet.py  Task.py  Topology.py  __init__.py
crates/consortium-py/ClusterShell/_py/: __init__.py
crates/consortium-py/src/: lib.rs  node_set.rs  range_set.rs
crates/consortium-ray/: CHANGELOG.md  Cargo.toml
crates/consortium-ray/src/: error.rs  lib.rs  tasks.rs
crates/consortium-skypilot/: CHANGELOG.md  Cargo.toml
crates/consortium-skypilot/src/: error.rs  lib.rs  tasks.rs
crates/consortium-slurm/: CHANGELOG.md  Cargo.toml
crates/consortium-slurm/src/: error.rs  lib.rs  tasks.rs
crates/consortium-test-harness/: CHANGELOG.md  Cargo.toml
crates/consortium-test-harness/src/: lib.rs
crates/consortium/benches/: dag_executor.rs
crates/consortium/src/: communication.rs  defaults.rs  event.rs  gateway.rs  lib.rs  msg_tree.rs  node_set.rs  node_utils.rs  propagation.rs  range_set.rs  task.rs  topology.rs
crates/consortium/src/dag/: builder.rs  cache.rs  context.rs  error.rs  executor.rs  graph.rs  mod.rs  pool.rs  types.rs
crates/consortium/src/engine/: mod.rs
crates/consortium/src/worker/: exec.rs  mod.rs  ssh.rs  tree.rs
crates/consortium/tests/: docker_integration.rs  tool_integration.rs
doc/sphinx/: further.rst
docs-index/: index.html
harness/: cargo_to_junit.py  generate_test_mapping.py  render_summary.py  run_comparison.py  sync_upstream_tests.sh
latest/: crates.js  help.html  index.html  settings.html
master/: crates.js  help.html  settings.html  src-files.js
molt/: fn.main.html  fn.parse_line.html  fn.run_dshbak.html
nix/: pre-commit.nix  python.nix  rust.nix
pinch/: fn.gather_input.html  fn.parse_autostep.html  fn.pick_random.html  fn.run.html
scripts/: test-report.py  verify-commits.sh
search.index/: 00fda2827b37.js  0179d260d17f.js  0248f8734b29.js  025eeef40938.js  02e9b2a7be60.js  035b40cc8db2.js  046b00d69750.js  04b446ac7fe0.js  04c71c7a4289.js  04e573d9cef6.js  05af2c0e4050.js  05cf46641ea5.js  06a1cf363654.js  07b9d17a73d4.js  0931605669fb.js  0a04ddf6ee80.js  0cebd6c8db05.js  0ecead6c9765.js  1097b0b4d613.js  11ee17678a98.js  1228ada55751.js  12e71a2ad55e.js  143680a5582c.js  1463efc594ed.js  14bec00828d7.js  15c6c3a7844d.js  16fbe5f33f3c.js  17347d191d2b.js  17757a2f0927.js  17cfbd2bbf45.js  1847797f6364.js  18a9d06a2ef6.js  199383904bca.js  19a81bb5acac.js  1a9ec6758db3.js  1b8671fecfb3.js  1cd6575929b9.js  1ef03cdc3ffa.js  1fe429c8f1bd.js  21e97a16b2f4.js  (+121 more)
tests/: CLIClubakTest.py  CLIClushTest.py  CLICompletionTest.py  CLINodesetTest.py  EngineErrorTest.py  NodeSetGroupTest.py  NodeSetTest.py  RangeSetNDTest.py  RangeSetTest.py  StreamWorkerTest.py  TLib.py  TaskDistantMixin.py  TaskDistantPdshTest.py  TaskLocalMixin.py  TaskRLimitsTest.py  TaskThreadJoinTest.py  TreeGatewayTest.py  TreeGatewayTimeoutTest.py  TreeTaskTest.py  TreeTopologyTest.py  TreeWorkerTest.py  WorkerExecTest.py
v1.1.1/: settings.html
(+2184 files in other folders)
