[package]
name = "consortium-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tools for consortium — claw, molt, pinch"

[dependencies]
consortium.workspace = true
consortium-nix.workspace = true
consortium-ansible.workspace = true
consortium-slurm.workspace = true
consortium-ray.workspace = true
consortium-skypilot.workspace = true
# cascade-viz needs to run live scenarios for `--live` mode
consortium-fanout-sim.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
is-terminal = "0.4"
indicatif = "0.17"
console = "0.15"
# tree module: machine-format serialization (tree text uses console for color)
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

[[bin]]
name = "cascade-viz"
path = "src/bin/cascade_viz.rs"

[[bin]]
name = "claw"
path = "src/claw.rs"

[[bin]]
name = "molt"
path = "src/molt.rs"

[[bin]]
name = "pinch"
path = "src/pinch.rs"

[[bin]]
name = "cast"
path = "src/cast.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
