[package]
name = "consortium-fanout-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic simulator for the consortium cascade primitive"

[dependencies]
consortium-nix = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "cascade_strategies"
harness = false

[package.metadata.docs.rs]
all-features = true
