[package]
name = "consortium-ray"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ray job orchestration with nix-built environments for consortium"

[dependencies]
consortium.workspace = true
consortium-nix.workspace = true
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
