[package]
name = "consortium-test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Docker-based mini-HPC test harness for consortium"

[dependencies]
consortium.workspace = true
consortium-nix.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
