[package]
name = "consortium"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library — Rust implementation of ClusterShell"

[dependencies]
thiserror.workspace = true
slotmap = "1.1"
configparser = "3"
dirs-next = "2"
hostname = "0.4"
libc = "0.2"

[features]
docker-tests = []

[dev-dependencies]
tempfile = "3"
consortium-test-harness = { path = "../consortium-test-harness" }
consortium-nix = { path = "../consortium-nix" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
