[package]
name = "consortium-crate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library — Rust implementation of ClusterShell"

[dependencies]
thiserror.workspace = true
slotmap = "1.1"
configparser = "3"
dirs-next = "2"
hostname = "0.4"
libc = "0.2"

# The library is published as `consortium-crate` for crates.io but exposed
# as `consortium` to internal callers (tests, sibling crates, the CLI).
# Cargo silently ignores `package.lib.name` (no warning until 1.85+), so
# this MUST be a proper [lib] table — without it `use consortium::*` in
# tests fails with E0432.
[lib]
name = "consortium"

[features]
docker-tests = []

[dev-dependencies]
tempfile = "3"
consortium-test-harness = { path = "../consortium-test-harness" }
consortium-nix = { path = "../consortium-nix" }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Microbench for the DAG executor — the canonical autoresearch perf signal.
# See benches/dag_executor.rs for the rationale (replaces a Docker-dominated
# wall-time metric whose noise floor was ~98% infrastructure).
[[bench]]
name = "dag_executor"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
